--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "Default": "server=localhost;user=root;password=lola;database=Docas",
+   "Default": "server=51.75.255.8;user=admin;password=docspassword13600;database=docas",
   }
 }
