--- a/Client/DocsWASM.Client.csproj
+++ b/Client/DocsWASM.Client.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <RunAOTCompilation>true</RunAOTCompilation>
-    <BlazorEnableCompression>false</BlazorEnableCompression>
+    <BlazorEnableCompression>true</BlazorEnableCompression>
 
     <BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
     <BlazorWebAssemblyPreserveCollationData>false</BlazorWebAssemblyPreserveCollationData>
@@ -19,6 +19,7 @@
     <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Views.Blazor" Version="2.88.3" />
     <PackageReference Include="Toolbelt.Blazor.FileDropZone" Version="2.1.1" />
+    <PackageReference Include="Toolbelt.Blazor.PWA.Updater" Version="2.1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +28,10 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Settings\" />
   </ItemGroup>
 
 </Project>
