--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "Default": "server=51.75.255.8;user=admin;password=docspassword13600;database=docas",
+   "Default": "server=51.75.200.184;user=cyril;password=CdCyril@lola;database=docs",
   }
 }
